--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://fonts.googleapis.com/css?family=Lusitana|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+  <link href="//cdn.rawgit.com/noelboss/featherlight/1.5.1/release/featherlight.min.css" type="text/css" rel="stylesheet" />
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -48,8 +49,8 @@
     <div class="row section scrollify-section" id="intro">
       <img id="introLogo" src="img/leuca.svg">
       <div id="introButtons">
-        <!--<a target="_blank" href="#">RESERVATIONS</a>-->
-        <a href="#contact">HOURS &amp; LOCATION</a>
+        <a data-featherlight="iframe" href="http://www.opentable.com/single.aspx?rid=268384&restref=268384">RESERVATIONS</a>
+        <a class="toContact" data-scroll href="#contact" href="#contact">HOURS &amp; LOCATION</a>
       </div>
       <img id="downArrow" class="floating" src="img/down.svg">
       <img id="cog" src="img/bg2.svg">
@@ -87,47 +88,45 @@
       </nav>
     </div>
     <div class="row section scroll-default" data-scroll-id="about" id="about">
-      <div class="col-sm-6 col-xl-5 offset-xl-1 centered-col">
+      <div class="col-md-6 col-xl-5 offset-xl-1 centered-col">
         <img src="img/about-img.png">
       </div>
-      <div class="col-sm-6 col-xl-5 centered-col about-text">
+      <div class="col-md-6 col-xl-5 centered-col about-text">
         <h2 class="section-title">About</h2>
-        <h1>Inspired by Southern Italy, Leuca is a neighborhood restaurant from Chef Andrew Carmellini's NoHo Hospitality Group, serving house-made pastas, wood-fired pizzas and rustic dishes in an elegant, sun-lit space.</h1>
+        <h1>Inspired by Southern Italy, Leuca is a neighborhood restaurant from Chef Andrew Carmellini's NoHo Hospitality Group serving house-made pastas, wood-fired pizzas and rustic dishes in a sunlit corner space in Williamsburg.</h1>
       </div>
       <img id="aboutPepper" class="parallax floating" src="img/pepper1.svg">
     </div>
     <div class="row section scroll-default" data-scroll-id="menus" id="menus">
-      <!--  <div class="col-xs-12 hidden-sm-up">
-        <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
-        <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
-        <a target="_blank" href="#">VIEW MENU</a>
-        <h1 class="lunch text-xs-center text-sm-left">Lunch</h1>
-        <a target="_blank" href="#">VIEW MENU</a>
-        <h1 class="dinner text-xs-center text-sm-left">Dinner</h1>
-        <a target="_blank" href="#">VIEW MENU</a>
-        <h1 class="wine text-xs-center text-sm-left">Wine &amp; Spirits</h1>
-        <a target="_blank" href="#">VIEW MENU</a>
+        <div class="col-xs-12 hidden-md-up">
+        <h2 class="section-title text-xs-center text-md-left">Menus</h2>
+        <h1 class="breakfast text-xs-center text-md-left">Breakfast</h1>
+        <a target="_blank" href="breakfast.pdf">VIEW MENU</a>
+        <h1 class="lunch text-xs-center text-md-left">Lunch</h1>
+        <a target="_blank">COMING SOON</a>
+        <h1 class="dinner text-xs-center text-md-left">Dinner</h1>
+        <a target="_blank" href="dinner.pdf">VIEW MENU</a>
+        <h1 class="wine text-xs-center text-md-left">Wine &amp; Spirits</h1>
+        <a target="_blank" href="drinks.pdf">VIEW MENU</a>
         <img src="img/Leuaca_Menus.jpg">
-      </div> -->
-      <div class="col-sm-6 centered-col">
-        <!-- CHANGE TO hidden-xs-down -->
-        <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
-        <div class="col-sm-6">
-          <h1 style="font-family:'Lusitana', serif;" class="text-xs-center text-sm-left">Coming Soon</h1></div>
-        <!--  <div class="col-sm-6">
-          <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
-          <a target="_blank" href="#">VIEW MENU</a>
-          <h1 class="dinner text-xs-center text-sm-left">Dinner</h1>
-          <a target="_blank" href="#">VIEW MENU</a>
-        </div>
-        <div class="col-sm-6">
-          <h1 class="lunch text-xs-center text-sm-left">Lunch</h1>
-          <a target="_blank" href="#">VIEW MENU</a>
-          <h1 class="wine text-xs-center text-sm-left">Wine &amp; Spirits</h1>
-          <a target="_blank" href="#">VIEW MENU</a>
-        </div> -->
       </div>
-      <div class="col-sm-6 hidden-xs-down">
+      <div class="col-md-6 centered-col hidden-md-down">
+        <!-- CHANGE TO hidden-xs-down -->
+        <h2 class="section-title text-xs-center text-md-left">Menus</h2>
+          <div class="col-md-6">
+          <h1 class="breakfast text-xs-center text-md-left">Breakfast</h1>
+          <a target="_blank" href="breakfast.pdf">VIEW MENU</a>
+          <h1 class="dinner text-xs-center text-md-left">Dinner</h1>
+          <a target="_blank" href="dinner.pdf">VIEW MENU</a>
+        </div>
+        <div class="col-md-6">
+          <h1 class="lunch text-xs-center text-md-left">Lunch</h1>
+          <a target="_blank">COMING SOON</a>
+          <h1 class="wine text-xs-center text-md-left">Wine &amp; Spirits</h1>
+          <a target="_blank" href="drinks.pdf">VIEW MENU</a>
+        </div>
+      </div>
+      <div class="col-md-6 hidden-md-down">
         <img src="img/Leuaca_Menus.jpg">
       </div>
     </div>
@@ -140,7 +139,7 @@
           <h2 class="section-title">Contact</h2>
           <a target="_blank" href="https://www.google.com/maps/place/111+N+12th+St,+Brooklyn,+NY+11249/@40.7221136,-73.9593687,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25942d4fd21b5:0x8478af1e2b73f606!8m2!3d40.7221096!4d-73.95718"><h1>111 North 12th Street<br>Brooklyn, NY 11249</h1></a>
           <br>
-          <a href="tel:17185815900"><h1>t. 718 581 5900</h1></a>
+          <a href="tel:7185815900"><h1>t. 718 581 5900</h1></a>
         </div>
         <div class="col-md-6">
           <h2 class="section-title">Hours</h2>
@@ -150,7 +149,8 @@
           <h1>Coming Soon</h1>
           <!--<h1>12PM to 3PM</h1>-->
           <p class="text-uppercase">Dinner Daily</p>
-          <h1>5:30PM to 12:00PM</h1>
+          <h1>Sunday-Thursday<br> 5:30 PM to 11:00 PM</h1>
+          <h1>Friday &amp; Saturday<br> 5:30 PM to 12:00 AM</h1>
         </div>
       </div>
     </div>
@@ -164,13 +164,13 @@
       </div>
     </div>
     <div class="row section scroll-default" data-scroll-id="events" id="events">
-      <div class="col-sm-5 col-xl-4 offset-xl-1">
+      <div class="col-md-5 col-xl-4 offset-xl-1">
         <img src="img/Leuca_PrivateEvents.jpg">
         <img id="downArrow2" class="parallax floating" src="img/down.svg">
       </div>
-      <div class="col-sm-7 col-xl-5 offset-xl-1">
+      <div class="col-md-7 col-xl-5 offset-xl-1">
         <h2 class="section-title private">Private Events</h2>
-        <h1>Leuca's private dining room accommodates up to 28 guests at a long, white marble dining table fully surrounded by hand-painted frescos inspire by the coastal Mediterranean. The room features its own cocktail bar, audio-visual and family-style menus by Chef Andrew Carmellini.</h1>
+        <h1>Leuca's private dining room accommodates up to 28 guests at a long, white marble farm table fully surrounded by hand-painted frescos inspired by the coastal Mediterranean. This room has its own separate cocktail bar, audio-visual capabilities, and Southern Italian family-style menus by Chef Andrew Carmellini.</h1>
         <a target="_blank" href="http://www.thewilliamvale.com/events/">Book Event</a>
         <h2 class="section-title cultural">Cultural Events</h2>
         <h1>Our cross-disciplinary cultural events feature established and emerging talents, each using The William Vale as their canvas in creative and unexpected ways.</h1>
@@ -178,17 +178,17 @@
       </div>
     </div>
     <div class="row section scroll-default" data-scroll-id="press" id="press">
-      <div class="col-sm-5 col-xl-5 centered-col">
+      <div class="col-md-5 col-xl-5 centered-col">
         <h2 class="section-title">Press</h2>
-        <h1>Coming Soon</h1>
-        <p class="text-uppercase" style="visibility:hidden;">The New York Times</p>
-        <h1 style="visibility:hidden;">Social Life in Gotham</h1>
+        <h1 class="text-xs-center text-lg-left">Coming Soon</h1>
+        <p class="text-uppercase hidden-md-down" style="visibility:hidden;">The New York Times</p>
+        <h1 class="hidden-md-down" style="visibility:hidden;">Social Life in Gotham</h1>
         <!--    <p class="text-uppercase">Eater</p> -->
-        <h1 style="visibility:hidden;">Carmellini Plans Wood-Fired Southern Italian Restaurant for William Vale Hotel</h1>
+        <h1 class="hidden-md-down" style="visibility:hidden;">Carmellini Plans Wood-Fired Southern Italian Restaurant for William Vale Hotel</h1>
         <!--  <p class="text-uppercase">Brooklyn Magazine</p>
         <h1>A True 24-Hour Brooklyn Experience</h1> -->
       </div>
-      <div class="col-sm-7 col-xl-6 centered-col">
+      <div class="col-md-7 col-xl-6 centered-col">
         <img src="img/Leuca_Press.jpg">
       </div>
     </div>
@@ -209,26 +209,27 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-2 centered-col">
+        <div class="col-md-2 centered-col">
           <p>111 North 12th St
             <br>Brooklyn, NY 11249</p>
         </div>
-        <div class="col-sm-2">
-          <p>Sunday thru Thursay
-            <br>7am to 11pm</p>
+        <div class="col-md-2">
+          <a href="tel:7185815900"><p>t. 718 581 5900</p></a>
+      <!--    <p>Sunday thru Thursay
+            <br>7am to 11pm</p> -->
         </div>
-        <div class="col-sm-2">
-          <p>Friday &amp; Saturday
-            <br>7am to 12am</p>
+        <div class="col-md-2">
+      <!--    <p>Friday &amp; Saturday
+            <br>7am to 12am</p> -->
         </div>
-        <div class="col-sm-2">
-          <p>t. 987 654 3210</p>
+        <div class="col-md-2">
+        <!--  <p>t. 718 581 5900</p> -->
         </div>
-        <div class="col-sm-4 logos">
-          <img src="img/facebook.svg">
-          <img src="img/instagram.svg">
-          <img src="img/twv.svg">
-          <img src="img/noho.svg">
+        <div class="col-md-4 logos">
+          <!--<img src="img/facebook.svg">
+          <img src="img/instagram.svg"> -->
+          <a target="_blank" href="http://www.thewilliamvale.com/dining/"><img src="img/twv.svg"></a>
+          <a target="_blank" href="http://nhgnyc.com/"><img src="img/noho.svg"></a>
         </div>
       </div>
     </div>
@@ -239,6 +240,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/10.1.0/js/smooth-scroll.min.js" integrity="sha256-cVLzLP6LzGFk6t13wwxmdHj5YxS0rU5LiSfHg0m25ig=" crossorigin="anonymous"></script>
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.5.1/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
   <script>
     smoothScroll.init();
   </script>
@@ -282,7 +284,7 @@
   </script>
   <script>
     $(document).ready(function() {
-      if ($(window).width() > 992) {
+      if ($(window).width() > 976) {
         var scroll_start = 0;
         var startchange = $('#bottomNav');
         var offset = startchange.offset();
@@ -301,7 +303,7 @@
       }
     });
     $(window).resize(function() {
-      if ($(window).width() > 992) {
+      if ($(window).width() > 976) {
         var scroll_start = 0;
         var startchange = $('#bottomNav');
         var offset = startchange.offset();
@@ -343,7 +345,7 @@
           "featureType": "water",
           "elementType": "geometry",
           "stylers": [{
-            "color": "#e9e9e9"
+            "color": "#afadb5"
           }, {
             "lightness": 17
           }]
@@ -351,7 +353,7 @@
           "featureType": "landscape",
           "elementType": "geometry",
           "stylers": [{
-            "color": "#f5f5f5"
+            "color": "#dedbdb"
           }, {
             "lightness": 20
           }]
@@ -359,7 +361,7 @@
           "featureType": "road.highway",
           "elementType": "geometry.fill",
           "stylers": [{
-            "color": "#ffffff"
+            "color": "#fcebdc"
           }, {
             "lightness": 17
           }]
@@ -367,7 +369,7 @@
           "featureType": "road.highway",
           "elementType": "geometry.stroke",
           "stylers": [{
-            "color": "#ffffff"
+            "color": "#fcebdc"
           }, {
             "lightness": 29
           }, {
@@ -377,7 +379,7 @@
           "featureType": "road.arterial",
           "elementType": "geometry",
           "stylers": [{
-            "color": "#ffffff"
+            "color": "#fcebdc"
           }, {
             "lightness": 18
           }]
@@ -385,7 +387,7 @@
           "featureType": "road.local",
           "elementType": "geometry",
           "stylers": [{
-            "color": "#ffffff"
+            "color": "#f7ebdb"
           }, {
             "lightness": 16
           }]
@@ -393,7 +395,7 @@
           "featureType": "poi",
           "elementType": "geometry",
           "stylers": [{
-            "color": "#f5f5f5"
+            "color": "#d4d1d4"
           }, {
             "lightness": 21
           }]
@@ -401,7 +403,7 @@
           "featureType": "poi.park",
           "elementType": "geometry",
           "stylers": [{
-            "color": "#dedede"
+            "color": "#ccc9ce"
           }, {
             "lightness": 21
           }]
